added page for showing character details

--- a/backend/public/character.html
+++ b/backend/public/character.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     testing html
+
 </body>
-</html>
+
+<script>
+    console.log("url: ",window.location.search);
+    
+</script>
+</html
