added bootstrap locally, added message for no info on comic page

--- a/backend/public/favorites.html
+++ b/backend/public/favorites.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorites</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="/css/bootstrap.css"/>
 
     <link rel="stylesheet" href="/css/main.css"/>
     <link rel="stylesheet" href="/css/flip-card.css"/>
@@ -13,6 +14,24 @@
 
 </head>
 <body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light m-auto " style="width: fit-content; margin-top: 50px !important;">
+      <ul class="navbar-nav mr-auto text-center">
+        <li class="nav-item  border border-3 border-dark">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item  border border-3 border-dark">
+          <a class="nav-link" href="/characters">Characters</a>
+        </li>
+        <li class="nav-item  border border-3 border-dark">
+          <a class="nav-link" href="/comics">Comics</a>
+        </li>
+        <li class="nav-item active border border-3 border-dark">
+          <a class="nav-link" href="/favorites">Favorites</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
     <h1 style="text-align: center;">Favorites</h1>
     <div id="container" class="container">
 
